[PR TOAZ-82] Request inspectors  (#7)
* request header implementation

* readme update and fixes

* fix typo

* readme update, added masking for cookies, fixed pipeline stopping after connection exception